# ghost-caller

./: README.md
.claude/: launch.json
.next/: trace
.next/cache/: .tsbuildinfo
.next/server/: server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  (+1 more)
backend/: .env  .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  coordinator.py  reservation_agent.py  state_machine.py
backend/app/api/: calendar.py  call.py  websocket.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  booking.py  call.py  itinerary.py  map_plan.py  users.py
backend/app/core/: auth.py  config.py  dependencies.py  exceptions.py  logging.py  supabase.py
backend/app/models/: booking.py  call.py  itinerary.py  user.py
backend/app/schemas/: booking.py  call.py  itinerary.py  map_plan.py
backend/app/services/: booking.py  database.py  itinerary.py  map_plan.py  places.py  scorer.py  voice.py  youtube.py
backend/app/utils/: prompt_builder.py
frontend/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: GhostCaller.tsx  PageController.tsx
frontend/hooks/: useRoutePreview.ts
frontend/lib/: ghost-caller-api.ts  itineraryJourney.ts  itineraryMapper.ts  itineraryStream.ts  mapPlanApi.ts  mockGroupSession.ts  mockItinerary.ts  mockMapPlan.ts
frontend/types/: call.ts  group-session.ts  itinerary-result.ts  itinerary.ts  map-plan.ts  mapDemo.ts
(+58 files in other folders)
